overflow bug fix

--- a/css/app.css
+++ b/css/app.css
@@ -10,7 +10,8 @@
 body {
     margin: 0px;
     padding: 0;
-   
+    overflow-x: hidden;
+
 
 
 }
@@ -376,7 +377,7 @@ h1 {
     padding-left: 20%;
     padding-right: 20%;
     transition: ease-out 0.3s;
-   
+
 }
 
 #book_hamburger {
@@ -404,7 +405,7 @@ h1 {
     font-size: 200%;
     font-weight: 600;
     letter-spacing: 1.7px
-    
+
 }
 
 
@@ -431,7 +432,7 @@ h1 {
 
     -webkit-transition: 0.5s;
     transition: 0.5s;
-  
+
 
 }
 
@@ -804,7 +805,7 @@ a {
     -webkit-transition: ease-out 0.3s;
     transition: ease-out 0.3s;
     cursor: pointer;
-    
+
 }
 
 
@@ -1288,11 +1289,11 @@ footer {
    .home_form input {
     padding: 10px 10px 10px 10px!important
 }
-    
+
     .bottom_home_section2 button {
     padding: 10px 20px 10px 20px!important;
-   
-    
+
+
 }
 }
 
@@ -1373,11 +1374,11 @@ footer {
      .footer_grid h3{
         font-size: 20px
     }
-    
+
     .footer_inner li{
         font-size: 18px
     }
-    
+
        .footer_inner3 p{
         font-size: 18px
     }
@@ -1501,17 +1502,17 @@ footer {
         padding-left: 10%;
         padding-right: 10%;
     }
-    
+
        .home_form input {
     padding: 10px 10px 10px 10px!important
 }
-    
+
     .bottom_home_section2 button {
     padding: 10px 60px 10px 60px!important;
         margin-left: 0;
         margin-top: 20px
-   
-    
+
+
 }
 }
 
@@ -1585,7 +1586,7 @@ footer {
     .bottom_home_section2 h1:last-child {
         margin-top: 10%
     }
-   
+
 }
 
 
@@ -1839,8 +1840,8 @@ footer {
     .logo img {
         height: 330px
     }
-    
-   
+
+
 #second_image_second img {
     height: 200px;
     margin-top: 15%;
@@ -1849,18 +1850,18 @@ footer {
 }
 footer {
     margin-top: -6%;
-   
+
 
 }
-    
+
     footer h3{
         font-size: 22px!important
     }
-    
+
     footer li{
         font-size: 18px!important
     }
-    
+
       footer p{
         font-size: 18px!important
     }
@@ -2261,12 +2262,12 @@ footer {
         height: 25vh
     }
 .menu-listing {
- 
+
     top: 10%;
     right: 10%;
- 
-   
-   
+
+
+
 }
 
 }
@@ -2293,17 +2294,17 @@ footer {
         height: 25vh
     }
 .menu-listing {
- 
+
     top: 20%;
     right: 10%;
     font-size: 10px;
     padding-bottom: 2PX
- 
-   
-   
+
+
+
 }
     .menu-listing li.active_li {
-    
+
     padding-top: 10px
 }
 
@@ -2329,19 +2330,19 @@ footer {
 
         height: 25vh
     }
-    
+
     .menu-listing {
- 
+
     top: 20%;
     right: 10%;
     font-size: 10px;
     padding-bottom: 2PX
- 
-   
-   
+
+
+
 }
     .menu-listing li.active_li {
-    
+
     padding-top: 10px
 }
 
@@ -2711,7 +2712,7 @@ footer {
 
     .main_about_div h2 {
         font-size: 30px;
- 
+
     }
 
 
@@ -2904,14 +2905,14 @@ footer {
 @media only screen and (device-width : 1280px) and (device-height : 950px) {
 
 
-   
+
     #svg_about_us_top {
 
         bottom: 460px;
     }
 
 
- 
+
 }
 
 
@@ -3097,13 +3098,13 @@ footer {
 @media only screen and (device-width : 800px) and (device-height : 1280px) {
 
 
-   
+
     #svg_about_us_top {
 
         bottom: 650px;
     }
 
- 
+
 }
 
 
@@ -3122,15 +3123,15 @@ footer {
     display:grid;
     grid-template-columns: repeat(2, 1fr);
     margin: auto 200px;
-    
-    
+
+
 }
 
 .form{
     position: relative;
     top: 200px;
     padding-top: 50px
- 
+
 }
 
 
@@ -3174,7 +3175,7 @@ padding: 10px 140px 10px 140px;;
 #map {
   height: 60%;
     width: 60%
-        
+
 }
 
 .title_conatc{
@@ -3193,7 +3194,7 @@ font-size: 20px;
 }
 
 .contact_inner_grid li{
-    
+
      font-family: alibaba-sans, sans-serif;
     list-style: none
 }
@@ -3206,7 +3207,7 @@ font-size: 20px;
 
 
 .contact_inner_grid li:last-child{
-    
+
     margin-bottom: 30px
 }
 
@@ -3236,15 +3237,15 @@ font-size: 20px;
 
 @media only screen and (max-device-width :1129px) {
 
-  
+
 .contact_grid{
- 
+
     grid-template-columns: repeat(1, 1fr);
     margin: 0;
    place-items: center;
 margin-right: 200px
-    
-    
+
+
 }
     #map {
   height: 40%;
@@ -3254,36 +3255,36 @@ padding: 200px 100px 200px 100px;
         margin-bottom: 100px;
         margin-left: 20px
 
-        
-        
+
+
 }
     .form{
         margin-top: -100px;
 
     }
     .contact_inner_grid_first{
-  
+
     }
-    
+
     .icons_conact img{
     height: 30px;
-   
+
 }
 
 .title_conatc{
 
 font-size: 20px;
-   
+
 }
 
 
 .none_title{
-   
+
         font-size: 17px!important;
-    
+
 }
 
-    
+
 }
 
 
@@ -3293,16 +3294,16 @@ font-size: 20px;
 
 @media only screen and (max-device-width :428px) {
 
-  
+
 
 .contact_grid{
- 
+
     grid-template-columns: repeat(1, 1fr);
     margin: 0px 20px 0 20px;;
    place-items: center;
 margin-right: 200px
-    
-    
+
+
 }
     #map {
   height: 30%;
@@ -3312,29 +3313,29 @@ padding: 200px 100px 200px 100px;
         margin-bottom: 100px;
         margin-left: 20px
 
-        
-        
+
+
 }
     .contact_inner_grid_first{
-  
+
     }
-    
+
     .icons_conact img{
     height: 30px;
-   
+
 }
 
 .title_conatc{
 
 font-size: 20px;
-   
+
 }
 
 
 .none_title{
-   
+
         font-size: 17px!important;
-    
+
 }
     .contact_inner_grid{
         margin-left: 30px
@@ -3364,5 +3365,5 @@ padding: 10px 105px 10px 105px;
 
 
 
-    
+
 }
